[package]
name = "aoc_2019"
version = "0.1.0"
authors = ["Brian Hulette <hulettbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "01"
path = "01/main.rs"

[[bin]]
name = "02"
path = "02/main.rs"

[[bin]]
name = "03"
path = "03/main.rs"

[[bin]]
name = "04"
path = "04/main.rs"

[[bin]]
name = "05"
path = "05/main.rs"

[[bin]]
name = "06"
path = "06/main.rs"

[[bin]]
name = "07"
path = "07/main.rs"

[[bin]]
name = "08"
path = "08/main.rs"

[[bin]]
name = "09"
path = "09/main.rs"

[[bin]]
name = "10"
path = "10/main.rs"

[[bin]]
name = "11"
path = "11/main.rs"

[[bin]]
name = "12"
path = "12/main.rs"

[[bin]]
name = "13"
path = "13/main.rs"

[[bin]]
name = "14"
path = "14/main.rs"

[[bin]]
name = "15"
path = "15/main.rs"

[[bin]]
name = "16"
path = "16/main.rs"

[[bin]]
name = "17"
path = "17/main.rs"

[[bin]]
name = "18"
path = "18/main.rs"

[[bin]]
name = "19"
path = "19/main.rs"

[[bin]]
name = "20"
path = "20/main.rs"

[[bin]]
name = "21"
path = "21/main.rs"

[[bin]]
name = "22"
path = "22/main.rs"

[[bin]]
name = "23"
path = "23/main.rs"

[[bin]]
name = "24"
path = "24/main.rs"

[[bin]]
name = "25"
path = "25/main.rs"

[dependencies]

